--- a/asssets/css/main.css
+++ b/asssets/css/main.css
@@ -109,6 +109,8 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+  border-bottom: 1px solid #dddddd;
+  padding-bottom: 2rem;
 }
 
 .scoreboard_times-badge {
