css: removendo bordar do ultimo item da lista

--- a/asssets/css/main.css
+++ b/asssets/css/main.css
@@ -113,6 +113,10 @@ body {
   padding-bottom: 2rem;
 }
 
+.scoreboard_times:last-child {
+  border-bottom: none;
+}
+
 .scoreboard_times-badge {
   display: flex;
   align-items: center;
