css: ajustando overflow do container

--- a/asssets/css/main.css
+++ b/asssets/css/main.css
@@ -9,6 +9,7 @@
 
 :root {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -25,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .header {
